--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -5,5 +5,9 @@
 		android:id="@+id/item_ellipse"
 		android:title="ellipse">
 	</item>
+	<item
+		android:id="@+id/item_cell"
+		android:title="cell">
+	</item>
 
 </menu>
