CirclesCanvasAnimtaion for http://stackoverflow.com/questions/24086270/draw-animated-circle-with-android-canvas

--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -9,5 +9,9 @@
 		android:id="@+id/item_cell"
 		android:title="cell">
 	</item>
+	<item
+		android:id="@+id/item_circles"
+		android:title="circles">
+	</item>
 
 </menu>
